Fix padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,7 @@ a {
 
 .bad {
   color: #fe7f9c;
+  text-align: center;
 }
 
 section {
@@ -348,8 +349,13 @@ section .upper {
   color: #ffffff;
   border-radius: 5px;
   line-height: 2;
-  max-width: 85%;
-  padding: 2rem 3.5rem;
+  padding: 2rem 1.5rem 2rem 3.5rem;
+}
+
+@media screen and (min-width: 768px) {
+  section .upper {
+    max-width: 85%;
+  }
 }
 
 section .upper .definitions {
@@ -440,6 +446,7 @@ section .wordsItem {
   -ms-grid-rows: 1fr 3fr;
       grid-template-rows: 1fr 3fr;
   margin: 5% auto;
+  overflow: auto;
 }
 
 @media screen and (min-width: 768px) {
@@ -469,10 +476,11 @@ section .wordsItem {
       -ms-flex-align: center;
           align-items: center;
   max-width: 350px;
-  padding: 1% 5%;
+  padding: 1% 0;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
+  overflow: auto;
 }
 
 @media screen and (min-width: 768px) {
