--- a/sass/components/_texts.scss
+++ b/sass/components/_texts.scss
@@ -19,7 +19,7 @@ a {
   letter-spacing: 1px;
   font-size: 1rem;
   word-break: break-all;
-  
+
   @media screen and (min-width: $max-sm){
     letter-spacing: 2px;
     font-size: 1.5rem;
@@ -34,4 +34,5 @@ a {
 }
 .bad {
   color: $error-color;
+  text-align: center; 
 }
